🧵 fix table alignment and spacing

--- a/static/css/core.css
+++ b/static/css/core.css
@@ -95,7 +95,7 @@ arr::before {
 }
 
 .generalTable > tbody > tr > td {
-	padding-bottom: 0;
+	padding: 4px 10px;
 	color: black;
 	text-decoration: none;
 }
